[package]
name = "evening-lights-on"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
